html.output
Terminaux inutilisés dans la grammaire

    tAND
    tOR
    tNOT
    tERROR


Grammaire

    0 $accept: program $end

    1 program: ε
    2        | program fonc_declaration

    3 $@1: ε

    4 fonc_declaration: $@1 tINT tID tLPAR params tRPAR tLBRACE instructions return_statement tRBRACE

    5 $@2: ε

    6 fonc_declaration: $@2 tVOID tID tLPAR params tRPAR tLBRACE instructions tRBRACE

    7 $@3: ε

    8 return_statement: $@3 tRETURN expression tSEMI

    9 print_statement: tPRINT expression tSEMI

   10 if_statement: tIF tLPAR expression tRPAR tLBRACE instructions tRBRACE
   11             | tIF tLPAR expression tRPAR tLBRACE instructions tRBRACE tELSE tLBRACE instructions tRBRACE

   12 while_statement: tWHILE tLPAR expression tRPAR tLBRACE instructions tRBRACE

   13 print_statement: tPRINT tLPAR tID tRPAR tSEMI

   14 $@4: ε

   15 int_declaration: $@4 tINT int_declaration
   16                | expression tASSIGN int_declaration
   17                | expression tSEMI

   18 instructions: if_statement
   19             | while_statement
   20             | print_statement
   21             | int_declaration
   22             | if_statement instructions
   23             | while_statement instructions
   24             | print_statement instructions
   25             | int_declaration instructions

   26 params: tVOID

   27 $@5: ε

   28 params: tINT tID tCOMMA $@5 params

   29 $@6: ε

   30 params: tVOID tID tCOMMA $@6 params
   31       | tINT tID
   32       | tVOID tID

   33 $@7: ε

   34 expression: expression tADD $@7 expression

   35 $@8: ε

   36 expression: expression tSUB $@8 expression

   37 $@9: ε

   38 expression: expression tMUL $@9 expression

   39 $@10: ε

   40 expression: expression tDIV $@10 expression

   41 $@11: ε

   42 expression: expression tEQ $@11 expression

   43 $@12: ε

   44 expression: expression tCOMMA $@12 expression

   45 $@13: ε

   46 expression: expression tLE $@13 expression

   47 $@14: ε

   48 expression: expression tGE $@14 expression

   49 $@15: ε

   50 expression: expression tNE $@15 expression

   51 $@16: ε

   52 expression: expression tLT $@16 expression

   53 $@17: ε

   54 expression: expression tGT $@17 expression
   55           | tID tLPAR expression tRPAR
   56           | tID
   57           | tNB


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tINT (258) 4 15 28 31
    tNB (259) 57
    tID (260) 4 6 13 28 30 31 32 55 56
    tIF (261) 10 11
    tWHILE (262) 12
    tELSE (263) 11
    tADD (264) 34
    tSUB (265) 36
    tEQ (266) 42
    tLBRACE (267) 4 6 10 11 12
    tRBRACE (268) 4 6 10 11 12
    tLPAR (269) 4 6 10 11 12 13 55
    tRPAR (270) 4 6 10 11 12 13 55
    tSEMI (271) 8 9 13 17
    tPRINT (272) 9 13
    tRETURN (273) 8
    tVOID (274) 6 26 30 32
    tMUL (275) 38
    tDIV (276) 40
    tLT (277) 52
    tGT (278) 54
    tNE (279) 50
    tGE (280) 48
    tLE (281) 46
    tASSIGN (282) 16
    tAND (283)
    tOR (284)
    tNOT (285)
    tCOMMA (286) 28 30 44
    tERROR (287)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (33)
        à gauche: 0
    program (34)
        à gauche: 1 2
        à droite: 0 2
    fonc_declaration (35)
        à gauche: 4 6
        à droite: 2
    $@1 (36)
        à gauche: 3
        à droite: 4
    $@2 (37)
        à gauche: 5
        à droite: 6
    return_statement (38)
        à gauche: 8
        à droite: 4
    $@3 (39)
        à gauche: 7
        à droite: 8
    print_statement (40)
        à gauche: 9 13
        à droite: 20 24
    if_statement (41)
        à gauche: 10 11
        à droite: 18 22
    while_statement (42)
        à gauche: 12
        à droite: 19 23
    int_declaration (43)
        à gauche: 15 16 17
        à droite: 15 16 21 25
    $@4 (44)
        à gauche: 14
        à droite: 15
    instructions (45)
        à gauche: 18 19 20 21 22 23 24 25
        à droite: 4 6 10 11 12 22 23 24 25
    params (46)
        à gauche: 26 28 30 31 32
        à droite: 4 6 28 30
    $@5 (47)
        à gauche: 27
        à droite: 28
    $@6 (48)
        à gauche: 29
        à droite: 30
    expression (49)
        à gauche: 34 36 38 40 42 44 46 48 50 52 54 55 56 57
        à droite: 8 9 10 11 12 16 17 34 36 38 40 42 44 46 48 50 52 54 55
    $@7 (50)
        à gauche: 33
        à droite: 34
    $@8 (51)
        à gauche: 35
        à droite: 36
    $@9 (52)
        à gauche: 37
        à droite: 38
    $@10 (53)
        à gauche: 39
        à droite: 40
    $@11 (54)
        à gauche: 41
        à droite: 42
    $@12 (55)
        à gauche: 43
        à droite: 44
    $@13 (56)
        à gauche: 45
        à droite: 46
    $@14 (57)
        à gauche: 47
        à droite: 48
    $@15 (58)
        à gauche: 49
        à droite: 50
    $@16 (59)
        à gauche: 51
        à droite: 52
    $@17 (60)
        à gauche: 53
        à droite: 54


État 0

    0 $accept: • program $end

    $défaut  réduction par utilisation de la règle 1 (program)

    program  aller à l'état 1


État 1

    0 $accept: program • $end
    2 program: program • fonc_declaration

    $end  décalage et aller à l'état 2

    tVOID    réduction par utilisation de la règle 5 ($@2)
    $défaut  réduction par utilisation de la règle 3 ($@1)

    fonc_declaration  aller à l'état 3
    $@1               aller à l'état 4
    $@2               aller à l'état 5


État 2

    0 $accept: program $end •

    $défaut  accepter


État 3

    2 program: program fonc_declaration •

    $défaut  réduction par utilisation de la règle 2 (program)


État 4

    4 fonc_declaration: $@1 • tINT tID tLPAR params tRPAR tLBRACE instructions return_statement tRBRACE

    tINT  décalage et aller à l'état 6


État 5

    6 fonc_declaration: $@2 • tVOID tID tLPAR params tRPAR tLBRACE instructions tRBRACE

    tVOID  décalage et aller à l'état 7


État 6

    4 fonc_declaration: $@1 tINT • tID tLPAR params tRPAR tLBRACE instructions return_statement tRBRACE

    tID  décalage et aller à l'état 8


État 7

    6 fonc_declaration: $@2 tVOID • tID tLPAR params tRPAR tLBRACE instructions tRBRACE

    tID  décalage et aller à l'état 9


État 8

    4 fonc_declaration: $@1 tINT tID • tLPAR params tRPAR tLBRACE instructions return_statement tRBRACE

    tLPAR  décalage et aller à l'état 10


État 9

    6 fonc_declaration: $@2 tVOID tID • tLPAR params tRPAR tLBRACE instructions tRBRACE

    tLPAR  décalage et aller à l'état 11


État 10

    4 fonc_declaration: $@1 tINT tID tLPAR • params tRPAR tLBRACE instructions return_statement tRBRACE

    tINT   décalage et aller à l'état 12
    tVOID  décalage et aller à l'état 13

    params  aller à l'état 14


État 11

    6 fonc_declaration: $@2 tVOID tID tLPAR • params tRPAR tLBRACE instructions tRBRACE

    tINT   décalage et aller à l'état 12
    tVOID  décalage et aller à l'état 13

    params  aller à l'état 15


État 12

   28 params: tINT • tID tCOMMA $@5 params
   31       | tINT • tID

    tID  décalage et aller à l'état 16


État 13

   26 params: tVOID •
   30       | tVOID • tID tCOMMA $@6 params
   32       | tVOID • tID

    tID  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 26 (params)


État 14

    4 fonc_declaration: $@1 tINT tID tLPAR params • tRPAR tLBRACE instructions return_statement tRBRACE

    tRPAR  décalage et aller à l'état 18


État 15

    6 fonc_declaration: $@2 tVOID tID tLPAR params • tRPAR tLBRACE instructions tRBRACE

    tRPAR  décalage et aller à l'état 19


État 16

   28 params: tINT tID • tCOMMA $@5 params
   31       | tINT tID •

    tCOMMA  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 31 (params)


État 17

   30 params: tVOID tID • tCOMMA $@6 params
   32       | tVOID tID •

    tCOMMA  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 32 (params)


État 18

    4 fonc_declaration: $@1 tINT tID tLPAR params tRPAR • tLBRACE instructions return_statement tRBRACE

    tLBRACE  décalage et aller à l'état 22


État 19

    6 fonc_declaration: $@2 tVOID tID tLPAR params tRPAR • tLBRACE instructions tRBRACE

    tLBRACE  décalage et aller à l'état 23


État 20

   28 params: tINT tID tCOMMA • $@5 params

    $défaut  réduction par utilisation de la règle 27 ($@5)

    $@5  aller à l'état 24


État 21

   30 params: tVOID tID tCOMMA • $@6 params

    $défaut  réduction par utilisation de la règle 29 ($@6)

    $@6  aller à l'état 25


État 22

    4 fonc_declaration: $@1 tINT tID tLPAR params tRPAR tLBRACE • instructions return_statement tRBRACE

    tNB     décalage et aller à l'état 26
    tID     décalage et aller à l'état 27
    tIF     décalage et aller à l'état 28
    tWHILE  décalage et aller à l'état 29
    tPRINT  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 14 ($@4)

    print_statement  aller à l'état 31
    if_statement     aller à l'état 32
    while_statement  aller à l'état 33
    int_declaration  aller à l'état 34
    $@4              aller à l'état 35
    instructions     aller à l'état 36
    expression       aller à l'état 37


État 23

    6 fonc_declaration: $@2 tVOID tID tLPAR params tRPAR tLBRACE • instructions tRBRACE

    tNB     décalage et aller à l'état 26
    tID     décalage et aller à l'état 27
    tIF     décalage et aller à l'état 28
    tWHILE  décalage et aller à l'état 29
    tPRINT  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 14 ($@4)

    print_statement  aller à l'état 31
    if_statement     aller à l'état 32
    while_statement  aller à l'état 33
    int_declaration  aller à l'état 34
    $@4              aller à l'état 35
    instructions     aller à l'état 38
    expression       aller à l'état 37


État 24

   28 params: tINT tID tCOMMA $@5 • params

    tINT   décalage et aller à l'état 12
    tVOID  décalage et aller à l'état 13

    params  aller à l'état 39


État 25

   30 params: tVOID tID tCOMMA $@6 • params

    tINT   décalage et aller à l'état 12
    tVOID  décalage et aller à l'état 13

    params  aller à l'état 40


État 26

   57 expression: tNB •

    $défaut  réduction par utilisation de la règle 57 (expression)


État 27

   55 expression: tID • tLPAR expression tRPAR
   56           | tID •

    tLPAR  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 56 (expression)


État 28

   10 if_statement: tIF • tLPAR expression tRPAR tLBRACE instructions tRBRACE
   11             | tIF • tLPAR expression tRPAR tLBRACE instructions tRBRACE tELSE tLBRACE instructions tRBRACE

    tLPAR  décalage et aller à l'état 42


État 29

   12 while_statement: tWHILE • tLPAR expression tRPAR tLBRACE instructions tRBRACE

    tLPAR  décalage et aller à l'état 43


État 30

    9 print_statement: tPRINT • expression tSEMI
   13                | tPRINT • tLPAR tID tRPAR tSEMI

    tNB    décalage et aller à l'état 26
    tID    décalage et aller à l'état 27
    tLPAR  décalage et aller à l'état 44

    expression  aller à l'état 45


État 31

   20 instructions: print_statement •
   24             | print_statement • instructions

    tNB     décalage et aller à l'état 26
    tID     décalage et aller à l'état 27
    tIF     décalage et aller à l'état 28
    tWHILE  décalage et aller à l'état 29
    tPRINT  décalage et aller à l'état 30

    tINT     réduction par utilisation de la règle 14 ($@4)
    $défaut  réduction par utilisation de la règle 20 (instructions)

    print_statement  aller à l'état 31
    if_statement     aller à l'état 32
    while_statement  aller à l'état 33
    int_declaration  aller à l'état 34
    $@4              aller à l'état 35
    instructions     aller à l'état 46
    expression       aller à l'état 37


État 32

   18 instructions: if_statement •
   22             | if_statement • instructions

    tNB     décalage et aller à l'état 26
    tID     décalage et aller à l'état 27
    tIF     décalage et aller à l'état 28
    tWHILE  décalage et aller à l'état 29
    tPRINT  décalage et aller à l'état 30

    tINT     réduction par utilisation de la règle 14 ($@4)
    $défaut  réduction par utilisation de la règle 18 (instructions)

    print_statement  aller à l'état 31
    if_statement     aller à l'état 32
    while_statement  aller à l'état 33
    int_declaration  aller à l'état 34
    $@4              aller à l'état 35
    instructions     aller à l'état 47
    expression       aller à l'état 37


État 33

   19 instructions: while_statement •
   23             | while_statement • instructions

    tNB     décalage et aller à l'état 26
    tID     décalage et aller à l'état 27
    tIF     décalage et aller à l'état 28
    tWHILE  décalage et aller à l'état 29
    tPRINT  décalage et aller à l'état 30

    tINT     réduction par utilisation de la règle 14 ($@4)
    $défaut  réduction par utilisation de la règle 19 (instructions)

    print_statement  aller à l'état 31
    if_statement     aller à l'état 32
    while_statement  aller à l'état 33
    int_declaration  aller à l'état 34
    $@4              aller à l'état 35
    instructions     aller à l'état 48
    expression       aller à l'état 37


État 34

   21 instructions: int_declaration •
   25             | int_declaration • instructions

    tNB     décalage et aller à l'état 26
    tID     décalage et aller à l'état 27
    tIF     décalage et aller à l'état 28
    tWHILE  décalage et aller à l'état 29
    tPRINT  décalage et aller à l'état 30

    tINT     réduction par utilisation de la règle 14 ($@4)
    $défaut  réduction par utilisation de la règle 21 (instructions)

    print_statement  aller à l'état 31
    if_statement     aller à l'état 32
    while_statement  aller à l'état 33
    int_declaration  aller à l'état 34
    $@4              aller à l'état 35
    instructions     aller à l'état 49
    expression       aller à l'état 37


État 35

   15 int_declaration: $@4 • tINT int_declaration

    tINT  décalage et aller à l'état 50


État 36

    4 fonc_declaration: $@1 tINT tID tLPAR params tRPAR tLBRACE instructions • return_statement tRBRACE

    $défaut  réduction par utilisation de la règle 7 ($@3)

    return_statement  aller à l'état 51
    $@3               aller à l'état 52


État 37

   16 int_declaration: expression • tASSIGN int_declaration
   17                | expression • tSEMI
   34 expression: expression • tADD $@7 expression
   36           | expression • tSUB $@8 expression
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression

    tADD     décalage et aller à l'état 53
    tSUB     décalage et aller à l'état 54
    tEQ      décalage et aller à l'état 55
    tSEMI    décalage et aller à l'état 56
    tMUL     décalage et aller à l'état 57
    tDIV     décalage et aller à l'état 58
    tLT      décalage et aller à l'état 59
    tGT      décalage et aller à l'état 60
    tNE      décalage et aller à l'état 61
    tGE      décalage et aller à l'état 62
    tLE      décalage et aller à l'état 63
    tASSIGN  décalage et aller à l'état 64
    tCOMMA   décalage et aller à l'état 65


État 38

    6 fonc_declaration: $@2 tVOID tID tLPAR params tRPAR tLBRACE instructions • tRBRACE

    tRBRACE  décalage et aller à l'état 66


État 39

   28 params: tINT tID tCOMMA $@5 params •

    $défaut  réduction par utilisation de la règle 28 (params)


État 40

   30 params: tVOID tID tCOMMA $@6 params •

    $défaut  réduction par utilisation de la règle 30 (params)


État 41

   55 expression: tID tLPAR • expression tRPAR

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 67


État 42

   10 if_statement: tIF tLPAR • expression tRPAR tLBRACE instructions tRBRACE
   11             | tIF tLPAR • expression tRPAR tLBRACE instructions tRBRACE tELSE tLBRACE instructions tRBRACE

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 68


État 43

   12 while_statement: tWHILE tLPAR • expression tRPAR tLBRACE instructions tRBRACE

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 69


État 44

   13 print_statement: tPRINT tLPAR • tID tRPAR tSEMI

    tID  décalage et aller à l'état 70


État 45

    9 print_statement: tPRINT expression • tSEMI
   34 expression: expression • tADD $@7 expression
   36           | expression • tSUB $@8 expression
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression

    tADD    décalage et aller à l'état 53
    tSUB    décalage et aller à l'état 54
    tEQ     décalage et aller à l'état 55
    tSEMI   décalage et aller à l'état 71
    tMUL    décalage et aller à l'état 57
    tDIV    décalage et aller à l'état 58
    tLT     décalage et aller à l'état 59
    tGT     décalage et aller à l'état 60
    tNE     décalage et aller à l'état 61
    tGE     décalage et aller à l'état 62
    tLE     décalage et aller à l'état 63
    tCOMMA  décalage et aller à l'état 65


État 46

   24 instructions: print_statement instructions •

    $défaut  réduction par utilisation de la règle 24 (instructions)


État 47

   22 instructions: if_statement instructions •

    $défaut  réduction par utilisation de la règle 22 (instructions)


État 48

   23 instructions: while_statement instructions •

    $défaut  réduction par utilisation de la règle 23 (instructions)


État 49

   25 instructions: int_declaration instructions •

    $défaut  réduction par utilisation de la règle 25 (instructions)


État 50

   15 int_declaration: $@4 tINT • int_declaration

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 14 ($@4)

    int_declaration  aller à l'état 72
    $@4              aller à l'état 35
    expression       aller à l'état 37


État 51

    4 fonc_declaration: $@1 tINT tID tLPAR params tRPAR tLBRACE instructions return_statement • tRBRACE

    tRBRACE  décalage et aller à l'état 73


État 52

    8 return_statement: $@3 • tRETURN expression tSEMI

    tRETURN  décalage et aller à l'état 74


État 53

   34 expression: expression tADD • $@7 expression

    $défaut  réduction par utilisation de la règle 33 ($@7)

    $@7  aller à l'état 75


État 54

   36 expression: expression tSUB • $@8 expression

    $défaut  réduction par utilisation de la règle 35 ($@8)

    $@8  aller à l'état 76


État 55

   42 expression: expression tEQ • $@11 expression

    $défaut  réduction par utilisation de la règle 41 ($@11)

    $@11  aller à l'état 77


État 56

   17 int_declaration: expression tSEMI •

    $défaut  réduction par utilisation de la règle 17 (int_declaration)


État 57

   38 expression: expression tMUL • $@9 expression

    $défaut  réduction par utilisation de la règle 37 ($@9)

    $@9  aller à l'état 78


État 58

   40 expression: expression tDIV • $@10 expression

    $défaut  réduction par utilisation de la règle 39 ($@10)

    $@10  aller à l'état 79


État 59

   52 expression: expression tLT • $@16 expression

    $défaut  réduction par utilisation de la règle 51 ($@16)

    $@16  aller à l'état 80


État 60

   54 expression: expression tGT • $@17 expression

    $défaut  réduction par utilisation de la règle 53 ($@17)

    $@17  aller à l'état 81


État 61

   50 expression: expression tNE • $@15 expression

    $défaut  réduction par utilisation de la règle 49 ($@15)

    $@15  aller à l'état 82


État 62

   48 expression: expression tGE • $@14 expression

    $défaut  réduction par utilisation de la règle 47 ($@14)

    $@14  aller à l'état 83


État 63

   46 expression: expression tLE • $@13 expression

    $défaut  réduction par utilisation de la règle 45 ($@13)

    $@13  aller à l'état 84


État 64

   16 int_declaration: expression tASSIGN • int_declaration

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 14 ($@4)

    int_declaration  aller à l'état 85
    $@4              aller à l'état 35
    expression       aller à l'état 37


État 65

   44 expression: expression tCOMMA • $@12 expression

    $défaut  réduction par utilisation de la règle 43 ($@12)

    $@12  aller à l'état 86


État 66

    6 fonc_declaration: $@2 tVOID tID tLPAR params tRPAR tLBRACE instructions tRBRACE •

    $défaut  réduction par utilisation de la règle 6 (fonc_declaration)


État 67

   34 expression: expression • tADD $@7 expression
   36           | expression • tSUB $@8 expression
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression
   55           | tID tLPAR expression • tRPAR

    tADD    décalage et aller à l'état 53
    tSUB    décalage et aller à l'état 54
    tEQ     décalage et aller à l'état 55
    tRPAR   décalage et aller à l'état 87
    tMUL    décalage et aller à l'état 57
    tDIV    décalage et aller à l'état 58
    tLT     décalage et aller à l'état 59
    tGT     décalage et aller à l'état 60
    tNE     décalage et aller à l'état 61
    tGE     décalage et aller à l'état 62
    tLE     décalage et aller à l'état 63
    tCOMMA  décalage et aller à l'état 65


État 68

   10 if_statement: tIF tLPAR expression • tRPAR tLBRACE instructions tRBRACE
   11             | tIF tLPAR expression • tRPAR tLBRACE instructions tRBRACE tELSE tLBRACE instructions tRBRACE
   34 expression: expression • tADD $@7 expression
   36           | expression • tSUB $@8 expression
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression

    tADD    décalage et aller à l'état 53
    tSUB    décalage et aller à l'état 54
    tEQ     décalage et aller à l'état 55
    tRPAR   décalage et aller à l'état 88
    tMUL    décalage et aller à l'état 57
    tDIV    décalage et aller à l'état 58
    tLT     décalage et aller à l'état 59
    tGT     décalage et aller à l'état 60
    tNE     décalage et aller à l'état 61
    tGE     décalage et aller à l'état 62
    tLE     décalage et aller à l'état 63
    tCOMMA  décalage et aller à l'état 65


État 69

   12 while_statement: tWHILE tLPAR expression • tRPAR tLBRACE instructions tRBRACE
   34 expression: expression • tADD $@7 expression
   36           | expression • tSUB $@8 expression
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression

    tADD    décalage et aller à l'état 53
    tSUB    décalage et aller à l'état 54
    tEQ     décalage et aller à l'état 55
    tRPAR   décalage et aller à l'état 89
    tMUL    décalage et aller à l'état 57
    tDIV    décalage et aller à l'état 58
    tLT     décalage et aller à l'état 59
    tGT     décalage et aller à l'état 60
    tNE     décalage et aller à l'état 61
    tGE     décalage et aller à l'état 62
    tLE     décalage et aller à l'état 63
    tCOMMA  décalage et aller à l'état 65


État 70

   13 print_statement: tPRINT tLPAR tID • tRPAR tSEMI

    tRPAR  décalage et aller à l'état 90


État 71

    9 print_statement: tPRINT expression tSEMI •

    $défaut  réduction par utilisation de la règle 9 (print_statement)


État 72

   15 int_declaration: $@4 tINT int_declaration •

    $défaut  réduction par utilisation de la règle 15 (int_declaration)


État 73

    4 fonc_declaration: $@1 tINT tID tLPAR params tRPAR tLBRACE instructions return_statement tRBRACE •

    $défaut  réduction par utilisation de la règle 4 (fonc_declaration)


État 74

    8 return_statement: $@3 tRETURN • expression tSEMI

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 91


État 75

   34 expression: expression tADD $@7 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 92


État 76

   36 expression: expression tSUB $@8 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 93


État 77

   42 expression: expression tEQ $@11 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 94


État 78

   38 expression: expression tMUL $@9 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 95


État 79

   40 expression: expression tDIV $@10 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 96


État 80

   52 expression: expression tLT $@16 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 97


État 81

   54 expression: expression tGT $@17 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 98


État 82

   50 expression: expression tNE $@15 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 99


État 83

   48 expression: expression tGE $@14 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 100


État 84

   46 expression: expression tLE $@13 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 101


État 85

   16 int_declaration: expression tASSIGN int_declaration •

    $défaut  réduction par utilisation de la règle 16 (int_declaration)


État 86

   44 expression: expression tCOMMA $@12 • expression

    tNB  décalage et aller à l'état 26
    tID  décalage et aller à l'état 27

    expression  aller à l'état 102


État 87

   55 expression: tID tLPAR expression tRPAR •

    $défaut  réduction par utilisation de la règle 55 (expression)


État 88

   10 if_statement: tIF tLPAR expression tRPAR • tLBRACE instructions tRBRACE
   11             | tIF tLPAR expression tRPAR • tLBRACE instructions tRBRACE tELSE tLBRACE instructions tRBRACE

    tLBRACE  décalage et aller à l'état 103


État 89

   12 while_statement: tWHILE tLPAR expression tRPAR • tLBRACE instructions tRBRACE

    tLBRACE  décalage et aller à l'état 104


État 90

   13 print_statement: tPRINT tLPAR tID tRPAR • tSEMI

    tSEMI  décalage et aller à l'état 105


État 91

    8 return_statement: $@3 tRETURN expression • tSEMI
   34 expression: expression • tADD $@7 expression
   36           | expression • tSUB $@8 expression
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression

    tADD    décalage et aller à l'état 53
    tSUB    décalage et aller à l'état 54
    tEQ     décalage et aller à l'état 55
    tSEMI   décalage et aller à l'état 106
    tMUL    décalage et aller à l'état 57
    tDIV    décalage et aller à l'état 58
    tLT     décalage et aller à l'état 59
    tGT     décalage et aller à l'état 60
    tNE     décalage et aller à l'état 61
    tGE     décalage et aller à l'état 62
    tLE     décalage et aller à l'état 63
    tCOMMA  décalage et aller à l'état 65


État 92

   34 expression: expression • tADD $@7 expression
   34           | expression tADD $@7 expression •
   36           | expression • tSUB $@8 expression
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression

    tEQ     décalage et aller à l'état 55
    tMUL    décalage et aller à l'état 57
    tDIV    décalage et aller à l'état 58
    tLT     décalage et aller à l'état 59
    tGT     décalage et aller à l'état 60
    tNE     décalage et aller à l'état 61
    tGE     décalage et aller à l'état 62
    tLE     décalage et aller à l'état 63
    tCOMMA  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 34 (expression)


État 93

   34 expression: expression • tADD $@7 expression
   36           | expression • tSUB $@8 expression
   36           | expression tSUB $@8 expression •
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression

    tEQ     décalage et aller à l'état 55
    tMUL    décalage et aller à l'état 57
    tDIV    décalage et aller à l'état 58
    tLT     décalage et aller à l'état 59
    tGT     décalage et aller à l'état 60
    tNE     décalage et aller à l'état 61
    tGE     décalage et aller à l'état 62
    tLE     décalage et aller à l'état 63
    tCOMMA  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 36 (expression)


État 94

   34 expression: expression • tADD $@7 expression
   36           | expression • tSUB $@8 expression
   38           | expression • tMUL $@9 expression
   40           | expression • tDIV $@10 expression
   42           | expression • tEQ $@11 expression
   42           | expression tEQ $@11 expression •
   44           | expression • tCOMMA $@12 expression
   46           | expression • tLE $@13 expression
   48           | expression • tGE $@14 expression
   50           | expression • tNE $@15 expression
   52           | expression • tLT $@16 expression
   54           | expression • tGT $@17 expression
